--- a/LoanManagementSystem/Views/AccountBooks/Create.cshtml
+++ b/LoanManagementSystem/Views/AccountBooks/Create.cshtml
@@ -14,7 +14,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.BookCode, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.BookCode, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.BookCode, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.BookCode, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -22,7 +22,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.BookName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.BookName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.BookName, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.BookName, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -30,7 +30,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.BookDescription, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextAreaFor(model => model.BookDescription, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextAreaFor(model => model.BookDescription, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.BookDescription, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -38,7 +38,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.AccountBookTypeId, "AccountBookTypeId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("AccountBookTypeId", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("AccountBookTypeId", null, htmlAttributes: new {  })
                 @Html.ValidationMessageFor(model => model.AccountBookTypeId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -46,7 +46,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.AccountHeadId, "AccountHeadId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("AccountHeadId", (SelectList)ViewBag.AccountHeadId, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("AccountHeadId", (SelectList)ViewBag.AccountHeadId, htmlAttributes: new {  })
                 @Html.ValidationMessageFor(model => model.AccountHeadId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -54,7 +54,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.BankInterest, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.BankInterest, new { htmlAttributes = new { @class = "form-control", @Value = ViewBag.BankInterest } })
+                @Html.EditorFor(model => model.BankInterest, new { htmlAttributes = new {  @Value = ViewBag.BankInterest } })
                 @Html.ValidationMessageFor(model => model.BankInterest, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -62,7 +62,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.BankCharges, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.BankCharges, new { htmlAttributes = new { @class = "form-control", @Value = ViewBag.BankCharges } })
+                @Html.EditorFor(model => model.BankCharges, new { htmlAttributes = new {  @Value = ViewBag.BankCharges } })
                 @Html.ValidationMessageFor(model => model.BankCharges, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -70,7 +70,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ReceiptVoucherPrefix, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ReceiptVoucherPrefix, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.ReceiptVoucherPrefix, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.ReceiptVoucherPrefix, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -78,7 +78,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ReceiptVoucherSuffix, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ReceiptVoucherSuffix, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.ReceiptVoucherSuffix, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.ReceiptVoucherSuffix, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -86,7 +86,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.PaymentVoucherPrefix, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.PaymentVoucherPrefix, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.PaymentVoucherPrefix, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.PaymentVoucherPrefix, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -94,7 +94,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.PaymentVoucherSuffix, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.PaymentVoucherSuffix, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.PaymentVoucherSuffix, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.PaymentVoucherSuffix, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -102,7 +102,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Status, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EnumDropDownListFor(model => model.Status, htmlAttributes: new { @class = "form-control" })
+                @Html.EnumDropDownListFor(model => model.Status, htmlAttributes: new {  })
                 @Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })
             </div>
         </div>
