--- a/LoanManagementSystem/Views/AccountHeads/Create.cshtml
+++ b/LoanManagementSystem/Views/AccountHeads/Create.cshtml
@@ -15,7 +15,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.AccountCode, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.AccountCode, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.AccountCode, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.AccountCode, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -23,7 +23,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.AccountName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.AccountName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.AccountName, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.AccountName, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -31,8 +31,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ScheduleId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @*@Html.EditorFor(model => model.ScheduleId, new { htmlAttributes = new { @class = "form-control" } })*@
-                @Html.DropDownListFor(x => x.ScheduleId, (SelectList)ViewBag.ScheduleList, new { htmlAttributes = new { @class = "form-control" } })
+                @*@Html.EditorFor(model => model.ScheduleId, new { htmlAttributes = new {  } })*@
+                @Html.DropDownListFor(x => x.ScheduleId, (SelectList)ViewBag.ScheduleList, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.ScheduleId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -40,7 +40,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.AccountTypeId, "AccountTypeId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("AccountTypeId", (SelectList)ViewBag.AccountTypeList, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("AccountTypeId", (SelectList)ViewBag.AccountTypeList, htmlAttributes: new {  })
                 @Html.ValidationMessageFor(model => model.AccountTypeId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -48,7 +48,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.CreditLimit, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.CreditLimit, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.CreditLimit, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.CreditLimit, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -56,7 +56,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.CreditDays, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.CreditDays, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.CreditDays, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.CreditDays, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -64,7 +64,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Contacts.Telephone1, "Telephone", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Contacts.Telephone1, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Contacts.Telephone1, new { htmlAttributes = new {  } })
                 @*@Html.ValidationMessageFor(model => model.ContactPerson.Name, "", new { @class = "text-danger" })*@
             </div>
         </div>
@@ -72,7 +72,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Contacts.Mobile1, "Mobile", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Contacts.Mobile1, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Contacts.Mobile1, new { htmlAttributes = new {  } })
                 @*@Html.ValidationMessageFor(model => model.ContactPerson.Name, "", new { @class = "text-danger" })*@
             </div>
         </div>
@@ -80,7 +80,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Address.Address1, "Address", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextAreaFor(model => model.Address.Address1, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextAreaFor(model => model.Address.Address1, new { htmlAttributes = new {  } })
                 @*@Html.ValidationMessageFor(model => model.ContactPerson.Name, "", new { @class = "text-danger" })*@
             </div>
         </div>
@@ -88,14 +88,14 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Contacts.ContactName, "Contact Person", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Contacts.ContactName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Contacts.ContactName, new { htmlAttributes = new {  } })
             </div>
         </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.TIN, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.TIN, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.TIN, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.TIN, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -103,7 +103,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.CST, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.CST, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.CST, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.CST, "", new { @class = "text-danger" })
             </div>
         </div>
