--- a/LoanManagementSystem/Views/Company/Create.cshtml
+++ b/LoanManagementSystem/Views/Company/Create.cshtml
@@ -55,7 +55,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Address.Address1, "Address", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Address.Address1, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Address.Address1, new { htmlAttributes = new {  } })
 
             </div>
         </div>
@@ -86,14 +86,14 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Contacts.ContactName, "Contact Person", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Contacts.ContactName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Contacts.ContactName, new { htmlAttributes = new {  } })
             </div>
         </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.Contacts.Telephone1, "Telephone", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Contacts.Telephone1, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Contacts.Telephone1, new { htmlAttributes = new {  } })
                 @*@Html.ValidationMessageFor(model => model.ContactPerson.Name, "", new { @class = "text-danger" })*@
             </div>
         </div>
@@ -101,7 +101,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Contacts.Mobile1, "Mobile", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Contacts.Mobile1, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Contacts.Mobile1, new { htmlAttributes = new {  } })
                 @*@Html.ValidationMessageFor(model => model.ContactPerson.Name, "", new { @class = "text-danger" })*@
             </div>
         </div>
@@ -109,7 +109,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Contacts.Email1, "Email", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Contacts.Email1, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Contacts.Email1, new { htmlAttributes = new {  } })
                 @*@Html.ValidationMessageFor(model => model.ContactPerson.Name, "", new { @class = "text-danger" })*@
             </div>
         </div>
