--- a/LoanManagementSystem/Views/Deposit/Create.cshtml
+++ b/LoanManagementSystem/Views/Deposit/Create.cshtml
@@ -40,7 +40,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.UserId, "Member", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("UserId", (SelectList)ViewBag.UserList, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("UserId", (SelectList)ViewBag.UserList, htmlAttributes: new {  })
                 @Html.ValidationMessageFor(model => model.UserId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -48,7 +48,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Duration, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Duration, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Duration, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.Duration, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -56,7 +56,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DepositType, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EnumDropDownListFor(model => model.DepositType, htmlAttributes: new { @class = "form-control" })
+                @Html.EnumDropDownListFor(model => model.DepositType, htmlAttributes: new {  })
                 @Html.ValidationMessageFor(model => model.DepositType, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -64,7 +64,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DepositAmount, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.DepositAmount, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.DepositAmount, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.DepositAmount, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -72,7 +72,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.InteresRate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.InteresRate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.InteresRate, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.InteresRate, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -88,7 +88,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ChequeDetails, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ChequeDetails, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.ChequeDetails, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.ChequeDetails, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -96,7 +96,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Notes, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Notes, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Notes, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.Notes, "", new { @class = "text-danger" })
             </div>
         </div>
