--- a/LoanManagementSystem/Views/Deposit/Edit.cshtml
+++ b/LoanManagementSystem/Views/Deposit/Edit.cshtml
@@ -24,7 +24,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Duration, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Duration, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Duration, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.Duration, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -32,7 +32,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DepositType, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EnumDropDownListFor(model => model.DepositType, htmlAttributes: new { @class = "form-control" })
+                @Html.EnumDropDownListFor(model => model.DepositType, htmlAttributes: new {  })
                 @Html.ValidationMessageFor(model => model.DepositType, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -40,7 +40,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.MaturityDate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.MaturityDate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.MaturityDate, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.MaturityDate, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -48,7 +48,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.TotalInstallments, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.TotalInstallments, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.TotalInstallments, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.TotalInstallments, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -56,7 +56,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DepositAmount, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.DepositAmount, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.DepositAmount, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.DepositAmount, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -64,7 +64,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.MatureAmount, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.MatureAmount, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.MatureAmount, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.MatureAmount, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -72,7 +72,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.InstallmentAmount, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.InstallmentAmount, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.InstallmentAmount, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.InstallmentAmount, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -80,7 +80,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ClosedDate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ClosedDate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.ClosedDate, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.ClosedDate, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -88,7 +88,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.RecurringDepositDate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.RecurringDepositDate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.RecurringDepositDate, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.RecurringDepositDate, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -96,7 +96,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Status, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EnumDropDownListFor(model => model.Status, htmlAttributes: new { @class = "form-control" })
+                @Html.EnumDropDownListFor(model => model.Status, htmlAttributes: new {  })
                 @Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -104,7 +104,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ChequeDetails, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ChequeDetails, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.ChequeDetails, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.ChequeDetails, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -112,7 +112,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.InteresRate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.InteresRate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.InteresRate, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.InteresRate, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -120,7 +120,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Notes, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Notes, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Notes, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.Notes, "", new { @class = "text-danger" })
             </div>
         </div>
