--- a/LoanManagementSystem/Views/Executive/Edit.cshtml
+++ b/LoanManagementSystem/Views/Executive/Edit.cshtml
@@ -61,7 +61,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Contacts.Telephone1, "Telephone", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Contacts.Telephone1, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Contacts.Telephone1, new { htmlAttributes = new {  } })
                 @*@Html.ValidationMessageFor(model => model.ContactPerson.Name, "", new { @class = "text-danger" })*@
             </div>
         </div>
@@ -69,7 +69,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Contacts.Mobile1, "Mobile", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Contacts.Mobile1, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Contacts.Mobile1, new { htmlAttributes = new {  } })
                 @*@Html.ValidationMessageFor(model => model.ContactPerson.Name, "", new { @class = "text-danger" })*@
             </div>
         </div>
@@ -77,7 +77,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.UserAddress.Address1, "Address", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.UserAddress.Address1, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.UserAddress.Address1, new { htmlAttributes = new {  } })
 
                 @Html.HiddenFor(model => model.UserAddressId)
                 @Html.HiddenFor(model => model.UserAddress.AddressId)
