--- a/LoanManagementSystem/Views/Loan/Edit.cshtml
+++ b/LoanManagementSystem/Views/Loan/Edit.cshtml
@@ -40,7 +40,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.UserId, "UserId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownListFor(m => m.UserId, (SelectList)ViewBag.UserList, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownListFor(m => m.UserId, (SelectList)ViewBag.UserList, htmlAttributes: new {  })
                 @Html.ValidationMessageFor(model => model.UserId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -56,7 +56,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.RePaymentInterval, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EnumDropDownListFor(model => model.RePaymentInterval, htmlAttributes: new { @class = "form-control" })
+                @Html.EnumDropDownListFor(model => model.RePaymentInterval, htmlAttributes: new {  })
                 @Html.ValidationMessageFor(model => model.RePaymentInterval, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -64,7 +64,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.RequestedAmount, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.RequestedAmount, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.RequestedAmount, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.RequestedAmount, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -72,7 +72,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ProposedAmount, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ProposedAmount, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.ProposedAmount, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.ProposedAmount, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -80,7 +80,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.LoanAmount, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.LoanAmount, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.LoanAmount, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.LoanAmount, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -88,7 +88,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.TotalInstallments, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.TotalInstallments, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.TotalInstallments, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.TotalInstallments, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -96,7 +96,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Status, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EnumDropDownListFor(model => model.Status, htmlAttributes: new { @class = "form-control" })
+                @Html.EnumDropDownListFor(model => model.Status, htmlAttributes: new {  })
                 @Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -104,7 +104,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ChequeDetails, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextAreaFor(model => model.ChequeDetails, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextAreaFor(model => model.ChequeDetails, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.ChequeDetails, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -112,7 +112,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.InteresRate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.InteresRate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.InteresRate, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.InteresRate, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -120,7 +120,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Notes, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextAreaFor(model => model.Notes, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextAreaFor(model => model.Notes, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.Notes, "", new { @class = "text-danger" })
             </div>
         </div>
