--- a/LoanManagementSystem/Views/Loan/LoanRecall.cshtml
+++ b/LoanManagementSystem/Views/Loan/LoanRecall.cshtml
@@ -71,7 +71,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Notes, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.TextAreaFor(model => model.Notes, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.TextAreaFor(model => model.Notes, new { htmlAttributes = new {  } })
                     @Html.ValidationMessageFor(model => model.Notes, "", new { @class = "text-danger" })
                 </div>
             </div>
