--- a/LoanManagementSystem/Views/LoanRepayments/Edit.cshtml
+++ b/LoanManagementSystem/Views/LoanRepayments/Edit.cshtml
@@ -21,7 +21,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.RepaymentCode, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.RepaymentCode, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.RepaymentCode, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.RepaymentCode, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -29,7 +29,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.PrincipalAmount, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.PrincipalAmount, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.PrincipalAmount, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.PrincipalAmount, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -37,7 +37,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.InterestAmount, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.InterestAmount, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.InterestAmount, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.InterestAmount, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -45,7 +45,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.InterestRate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.InterestRate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.InterestRate, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.InterestRate, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -53,7 +53,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.RepaymentAmount, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.RepaymentAmount, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.RepaymentAmount, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.RepaymentAmount, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -61,7 +61,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.PendingPrincipalAmount, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.PendingPrincipalAmount, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.PendingPrincipalAmount, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.PendingPrincipalAmount, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -69,7 +69,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Status, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EnumDropDownListFor(model => model.Status, htmlAttributes: new { @class = "form-control" })
+                @Html.EnumDropDownListFor(model => model.Status, htmlAttributes: new {  })
                 @Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -77,7 +77,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.PaymentMode, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EnumDropDownListFor(model => model.PaymentMode, htmlAttributes: new { @class = "form-control" })
+                @Html.EnumDropDownListFor(model => model.PaymentMode, htmlAttributes: new {  })
                 @Html.ValidationMessageFor(model => model.PaymentMode, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -85,7 +85,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ChequeDetails, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ChequeDetails, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.ChequeDetails, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.ChequeDetails, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -93,7 +93,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Notes, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Notes, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Notes, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.Notes, "", new { @class = "text-danger" })
             </div>
         </div>
