--- a/LoanManagementSystem/Views/LoanRepayments/Index.cshtml
+++ b/LoanManagementSystem/Views/LoanRepayments/Index.cshtml
@@ -19,7 +19,7 @@
     <div class="row invoice-info"></div>
     <div class="form-group">
         <div class="col-md-10">
-            @Html.DropDownList("LoanId", (SelectList)ViewBag.LoanList, htmlAttributes: new { @class = "form-control", @ID = "ddlLoan", onchange = "document.location.href = '/LoanRepayments/Index?LoanId=' + this.options[this.selectedIndex].value;" })
+            @Html.DropDownList("LoanId", (SelectList)ViewBag.LoanList, htmlAttributes: new {  @ID = "ddlLoan", onchange = "document.location.href = '/LoanRepayments/Index?LoanId=' + this.options[this.selectedIndex].value;" })
         </div>
     </div>
     @{
