--- a/LoanManagementSystem/Views/ScheduleSettings/Edit.cshtml
+++ b/LoanManagementSystem/Views/ScheduleSettings/Edit.cshtml
@@ -17,7 +17,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ScheduleName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ScheduleName, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.ScheduleName, new { htmlAttributes = new {  } })
                 @Html.ValidationMessageFor(model => model.ScheduleName, "", new { @class = "text-danger" })
             </div>
         </div>
