--- a/LoanManagementSystem/Views/User/Edit.cshtml
+++ b/LoanManagementSystem/Views/User/Edit.cshtml
@@ -90,7 +90,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.UserGroupId, "UserGroupId", new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownListFor(model => model.UserGroupId, (SelectList)ViewBag.UserGroupList, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownListFor(model => model.UserGroupId, (SelectList)ViewBag.UserGroupList, htmlAttributes: new {  })
                 @Html.ValidationMessageFor(model => model.UserGroupId)
             </div>
         </div>
